# hotel-res-prediction

./: .gitignore  Jenkinsfile  README.md  main.py  pyproject.toml
artifacts/processed/: processed_test.parquet  processed_train.parquet
artifacts/raw/: test.parquet  train.parquet
config/: config.yaml  model_params.py  paths_config.py
custom_jenkins/: Dockerfile
pipeline/: pipeline.py
src/: custom_exceptions.py  data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
src/logging/: logger.py
utils/: common_functions.py
