[project]
name = "hotel-res-prediction"
version = "0.1.0"
description = "Pipele for predicting hotel reservations with MLFlow-Jenkins and GCP deployment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=3.3.1",
    "imbalanced-learn>=0.14.0",
    "lightgbm>=4.6.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = ["ruff>=0.13.0"]
